working code to visit craigslits page

--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up Splinter\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
-    "browser = Browser('chrome', **executable_path, headless=False)\n"
+    "browser = Browser('chrome', **executable_path, headless=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visit the Austin Pets Craigslist site\n",
+    "url = 'https://austin.craigslist.org/search/pet'\n",
+    "browser.visit(url)"
    ]
   },
   {
@@ -27,14 +38,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Parse the HTML\n",
+    "html = browser.html\n",
+    "html_soup = soup(html, 'html.parser')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Scrape the Title\n",
+    "title = html_soup.find_all('h3',class_=\"result-heading\")\n",
+    "title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# <a class= \"result-image gallery\" to scrape only ones that have image\n",
+    "# <h3 class=\"result-heading\" for title of post"
+   ]
   }
  ],
  "metadata": {
